--- a/index.html
+++ b/index.html
@@ -230,6 +230,19 @@
                 padding-left: 0;
             }
         }
+        
+        @media print {
+            body {
+                margin: 0;
+                background-color: #fff;
+            }
+            .container {
+                box-shadow: none;
+                margin: 0;
+                max-width: 100%;
+                border-radius: 0;
+            }
+        }
 
     </style>
 </head>
@@ -239,7 +252,6 @@
         <!-- LEFT COLUMN -->
         <div class="left-column">
             <div class="profile-pic-container">
-                <!-- Ảnh đại diện đã được cập nhật -->
                 <img src="https://scontent.fsgn2-7.fna.fbcdn.net/v/t39.30808-6/297893431_3225303497726827_3919961587931500371_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=dOZFzIG1_6AQ7kNvwHQJzgP&_nc_oc=Admiff5AdPrC3InRhNB5m_A_CE_MBW0lteCuJCZD7oL2rZZgEl9dHM2bKgc6_2jG8LA&_nc_zt=23&_nc_ht=scontent.fsgn2-7.fna&_nc_gid=3NNDC-CceF0YJgfRbVapnA&oh=00_AfRoOjbO-jorDaBtvv-EB5ikhOEOrW37ShBG-QquCgcfVQ&oe=6885A6E5" alt="Ảnh đại diện" class="profile-pic" onerror="this.onerror=null;this.src='https://placehold.co/150x150/0d47a1/FFFFFF?text=Phuc';">
             </div>
             <h1 class="name">NGUYỄN HOÀI PHÚC</h1>
@@ -248,6 +260,7 @@
             <div class="left-section contact-info">
                 <h2 class="left-section-title">Thông tin liên hệ</h2>
                 <ul>
+                    <li><i class="fas fa-birthday-cake"></i> 13/05/1999</li>
                     <li><i class="fas fa-phone"></i> 0582135081</li>
                     <li><i class="fas fa-envelope"></i> hcmyxconan12@gmail.com</li>
                     <li><i class="fas fa-map-marker-alt"></i> 68B/11 Đặng Nguyên Cẩn, P.14, Q.6, TP.HCM</li>
