--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             font-weight: 700;
             margin: 0;
             text-align: center;
+            white-space: nowrap;
         }
 
         .title {
