--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV - Nguyễn Hoài Phúc</title>
+    <title>CV - Nguyen Hoai Phuc</title>
     <!-- Import Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Import Google Fonts -->
@@ -261,39 +261,40 @@
         <!-- LEFT COLUMN -->
         <div class="left-column">
             <div class="profile-pic-container">
-                <img src="https://scontent.fsgn2-7.fna.fbcdn.net/v/t39.30808-6/297893431_3225303497726827_3919961587931500371_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=dOZFzIG1_6AQ7kNvwHQJzgP&_nc_oc=Admiff5AdPrC3InRhNB5m_A_CE_MBW0lteCuJCZD7oL2rZZgEl9dHM2bKgc6_2jG8LA&_nc_zt=23&_nc_ht=scontent.fsgn2-7.fna&_nc_gid=3NNDC-CceF0YJgfRbVapnA&oh=00_AfRoOjbO-jorDaBtvv-EB5ikhOEOrW37ShBG-QquCgcfVQ&oe=6885A6E5" alt="Ảnh đại diện" class="profile-pic" onerror="this.onerror=null;this.src='https://placehold.co/150x150/0d47a1/FFFFFF?text=Phuc';">
+                <img src="https://scontent.fsgn2-7.fna.fbcdn.net/v/t39.30808-6/297893431_3225303497726827_3919961587931500371_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=dOZFzIG1_6AQ7kNvwHQJzgP&_nc_oc=Admiff5AdPrC3InRhNB5m_A_CE_MBW0lteCuJCZD7oL2rZZgEl9dHM2bKgc6_2jG8LA&_nc_zt=23&_nc_ht=scontent.fsgn2-7.fna&_nc_gid=3NNDC-CceF0YJgfRbVapnA&oh=00_AfRoOjbO-jorDaBtvv-EB5ikhOEOrW37ShBG-QquCgcfVQ&oe=6885A6E5" alt="Profile Picture" class="profile-pic" onerror="this.onerror=null;this.src='https://placehold.co/150x150/0d47a1/FFFFFF?text=Phuc';">
             </div>
-            <h1 class="name">NGUYỄN HOÀI PHÚC</h1>
+            <h1 class="name">NGUYEN HOAI PHUC</h1>
             <p class="title">Unity Developer | Game Developer</p>
 
             <div class="left-section contact-info">
-                <h2 class="left-section-title">Thông tin liên hệ</h2>
+                <h2 class="left-section-title">Contact</h2>
                 <ul>
-                    <li><i class="fas fa-birthday-cake"></i> 13/05/1999</li>
+                    <li><i class="fas fa-birthday-cake"></i> May 13, 1999</li>
                     <li><i class="fas fa-phone"></i> 0582135081</li>
                     <li><i class="fas fa-envelope"></i> hcmyxconan12@gmail.com</li>
-                    <li><i class="fas fa-map-marker-alt"></i> 68B/11 Đặng Nguyên Cẩn, P.14, Q.6, TP.HCM</li>
+                    <li><i class="fas fa-map-marker-alt"></i> 68B/11 Dang Nguyen Can, Ward 14, Dist 6, HCMC</li>
                     <li><i class="fab fa-github"></i> <a href="https://github.com/hcmyxconan15" target="_blank">github.com/hcmyxconan15</a></li>
+                    <li><i class="fab fa-google-play"></i> <a href="https://play.google.com/store/apps/dev?id=5609148763993571299" target="_blank">Google Play Store</a></li>
                 </ul>
             </div>
 
             <div class="left-section skills">
-                <h2 class="left-section-title">Kỹ năng</h2>
+                <h2 class="left-section-title">Skills</h2>
                 <ul class="skills-list">
-                    <li><strong>Game Dev:</strong> Unity (Thành thạo), C#, Cocos</li>
-                    <li><strong>Backend:</strong> NestJS (Thành thạo), Node.js</li>
+                    <li><strong>Game Dev:</strong> Unity (Proficient), C#, Cocos</li>
+                    <li><strong>Backend:</strong> NestJS (Proficient), Node.js</li>
                     <li><strong>Blockchain:</strong> Smart Contract, Solidity, Web3.js</li>
-                    <li><strong>Công cụ:</strong> Git, CI/CD, Scrum, Jira, Photoshop (Chỉnh sửa UI)</li>
-                    <li><strong>Cơ sở dữ liệu:</strong> PostgreSQL, MongoDB</li>
-                    <li><strong>Kỹ năng mềm:</strong> Giải quyết vấn đề, Làm việc nhóm</li>
+                    <li><strong>Tools:</strong> Git, CI/CD, Scrum, Jira, Photoshop (UI Editing)</li>
+                    <li><strong>Databases:</strong> PostgreSQL, MongoDB</li>
+                    <li><strong>Soft Skills:</strong> Problem Solving, Teamwork</li>
                 </ul>
             </div>
 
             <div class="left-section favorite-games">
-                <h2 class="left-section-title">Game yêu thích</h2>
+                <h2 class="left-section-title">Favorite Games</h2>
                 <ul class="skills-list">
-                    <li>Game Gacha (Honkai: Star Rail, Sword of Convalaria)</li>
-                    <li>Game Idle/Clicker có chiều sâu</li>
+                    <li>Gacha Games (Honkai: Star Rail, Sword of Convalaria)</li>
+                    <li>In-depth Idle/Clicker Games</li>
                 </ul>
             </div>
 
@@ -302,25 +303,25 @@
         <!-- RIGHT COLUMN -->
         <div class="right-column">
             <div class="right-section objective">
-                <h2 class="right-section-title">Mục tiêu nghề nghiệp</h2>
-                <p>Với 3 năm kinh nghiệm làm việc với Unity và phát triển game, cùng kiến thức về backend (NestJS) và công nghệ blockchain, tôi mong muốn được áp dụng những kỹ năng và sự nhiệt huyết của mình để đóng góp vào sự thành công của các dự án game sáng tạo và thử thách, hướng tới vai trò Technical Lead trong tương lai.</p>
+                <h2 class="right-section-title">Career Objective</h2>
+                <p>With 3 years of experience in Unity and game development, complemented by a strong background in backend (NestJS) and blockchain technology, I am eager to apply my skills and passion to contribute to the success of creative and challenging game projects. My long-term goal is to grow into a Technical Lead role.</p>
             </div>
 
             <div class="right-section experience">
-                <h2 class="right-section-title">Kinh nghiệm làm việc</h2>
+                <h2 class="right-section-title">Work Experience</h2>
                 <div class="experience-item">
                     <div class="item-header">
                         <h3 class="item-title">Full-stack Game Developer</h3>
-                        <span class="item-date">05/2024 - Hiện tại</span>
+                        <span class="item-date">May 2024 - Present</span>
                     </div>
-                    <p class="item-subtitle">Startup Game Blockchain</p>
+                    <p class="item-subtitle">Blockchain Game Startup</p>
                     <div class="item-content">
                         <ul>
-                            <li>Phát triển chính cho dự án game trên Telegram, đạt mốc <strong>1 triệu người dùng</strong>.</li>
-                            <li><strong>Client:</strong> Lập trình gameplay, UI, tối ưu hiệu năng bằng <strong>Unity</strong> và <strong>Cocos</strong>.</li>
-                            <li><strong>Backend:</strong> Xây dựng và phát triển API cho game bằng <strong>NestJS</strong>.</li>
-                            <li><strong>Blockchain:</strong> Viết và triển khai <strong>Smart Contract (Solidity)</strong>.</li>
-                            <li><strong>DevOps:</strong> Tham gia xây dựng và cải thiện quy trình CI/CD.</li>
+                            <li>Spearheaded the development of a Telegram-based game, driving its growth to over <strong>1 million users</strong>.</li>
+                            <li><strong>Client-side:</strong> Engineered core gameplay loops, responsive UI systems, and conducted extensive performance optimization for mobile platforms using <strong>Unity</strong> and <strong>Cocos</strong>. This involved profiling, memory management, and reducing draw calls to ensure a smooth user experience.</li>
+                            <li><strong>Backend:</strong> Designed and developed a robust set of RESTful APIs with <strong>NestJS</strong> to handle user data, leaderboards, and real-time game events.</li>
+                            <li><strong>Blockchain:</strong> Authored, tested, and deployed secure and gas-efficient <strong>Smart Contracts using Solidity</strong> to manage in-game assets and token transactions.</li>
+                            <li><strong>DevOps:</strong> Played an integral role in establishing and refining an automated <strong>CI/CD pipeline</strong>, which streamlined builds, testing, and deployments, significantly improving development velocity.</li>
                         </ul>
                     </div>
                 </div>
@@ -328,55 +329,64 @@
                 <div class="experience-item">
                     <div class="item-header">
                         <h3 class="item-title">Unity Developer</h3>
-                        <span class="item-date">03/2022 - 03/2024</span>
+                        <span class="item-date">Mar 2022 - Mar 2024</span>
                     </div>
                     <p class="item-subtitle">Wolffun Game</p>
                     <div class="item-content">
                         <ul>
-                            <li><strong>Dự án Thetan Rival:</strong> Phát triển gameplay, hệ thống nhân vật.</li>
-                            <li><strong>Dự án Thetan Arena:</strong> Bảo trì, sửa lỗi và tối ưu hóa hiệu năng.</li>
-                            <li>Tích hợp các SDK của bên thứ ba (quảng cáo, phân tích).</li>
-                            <li>Làm việc trong môi trường Agile/Scrum, sử dụng Git để quản lý mã nguồn.</li>
+                            <li><strong>Thetan Rival Project:</strong> Developed core gameplay mechanics and character systems.</li>
+                            <li><strong>Thetan Arena Project:</strong> Responsible for maintenance, bug fixing, and performance optimization.</li>
+                            <li>Integrated third-party SDKs for advertising and analytics.</li>
+                            <li>Worked in an Agile/Scrum environment, utilizing Git for version control.</li>
                         </ul>
                     </div>
                 </div>
             </div>
 
             <div class="right-section projects">
-                <h2 class="right-section-title">Dự án nổi bật</h2>
+                <h2 class="right-section-title">Key Projects</h2>
                 <div class="project-item">
-                    <h3 class="item-title">Telegram Game (1 triệu người dùng)</h3>
-                    <p class="item-subtitle">Game chiến thuật/casual trên nền tảng Telegram.</p>
+                    <h3 class="item-title">Telegram Game (1M+ Users)</h3>
+                    <p class="item-subtitle">Strategy/Casual game on the Telegram platform.</p>
                     <div class="item-content">
-                        <p>Đảm nhận vai trò Full-stack, chịu trách nhiệm từ client, backend đến smart contract.</p>
-                        <p class="project-tech"><strong>Công nghệ:</strong> Unity, Cocos, NestJS, Smart Contract.</p>
+                        <p>Acted as a Full-stack Developer, responsible for the entire stack from client and backend to smart contracts.</p>
+                        <p class="project-tech"><strong>Technologies:</strong> Unity, Cocos, NestJS, Smart Contract.</p>
                     </div>
                 </div>
                  <div class="project-item">
                     <h3 class="item-title">Thetan Rival & Thetan Arena</h3>
-                    <p class="item-subtitle">Game MOBA/Party Game trên di động.</p>
+                    <p class="item-subtitle">Mobile MOBA/Party Game.</p>
                     <div class="item-content">
-                        <p>Tham gia phát triển các tính năng gameplay cốt lõi và tối ưu hóa hiệu năng cho các sản phẩm đã có hàng triệu người chơi.</p>
-                        <p class="project-tech"><strong>Công nghệ:</strong> Unity, C#.</p>
+                        <p>Contributed to developing core gameplay features and optimizing performance for titles with millions of players.</p>
+                        <p class="project-tech"><strong>Technologies:</strong> Unity, C#.</p>
                     </div>
                 </div>
             </div>
 
             <div class="right-section education">
-                <h2 class="right-section-title">Học vấn</h2>
+                <h2 class="right-section-title">Education</h2>
                 <div class="education-item">
                      <div class="item-header">
-                         <h3 class="item-title">ĐẠI HỌC CÔNG NGHỆ THÔNG TIN - ĐHQG TP.HCM</h3>
+                         <h3 class="item-title">UNIVERSITY OF INFORMATION TECHNOLOGY - VNU-HCMC</h3>
                          <span class="item-date">2022 - 2024</span>
                      </div>
-                     <p class="item-subtitle">Văn bằng 2 - Chuyên ngành: Kỹ thuật Phần mềm</p>
+                     <p class="item-subtitle">Second Degree - Major: Software Engineering</p>
+                     <div class="item-content">
+                         <p style="margin-top: 10px; font-weight: 500;">Key Projects:</p>
+                         <ul>
+                             <li>Idle Hero TD - Fantasy Tower Defense</li>
+                             <li>Mega Tower - Casual TD Game</li>
+                             <li>Kingdom Guard: Tower Defense</li>
+                             <li>Car Clash: 3D Racing Games</li>
+                         </ul>
+                     </div>
                 </div>
                 <div class="education-item">
                     <div class="item-header">
-                        <h3 class="item-title">HỌC VIỆN HÀNH CHÍNH QUỐC GIA</h3>
+                        <h3 class="item-title">NATIONAL ACADEMY OF PUBLIC ADMINISTRATION</h3>
                         <span class="item-date">2017 - 2021</span>
                     </div>
-                    <p class="item-subtitle">Chuyên ngành: Thanh tra</p>
+                    <p class="item-subtitle">Major: Inspectorate</p>
                </div>
             </div>
 
